Columns should invalidate the tree when their width changes, not just when attributes that affect width change.  Bug 257237, r=varga, sr=roc